--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.10",
     "winston": "^3.7.2"
   }
 }
